Changed color for dark mode, fixed collapsed fieldset error

--- a/source/scss/enhancer-base.scss
+++ b/source/scss/enhancer-base.scss
@@ -331,12 +331,12 @@ fieldset {
   }
   &.collapsed {
     border: none;
-    > h2 {
-      display: block;
-      opacity: 1;
+    > * {
+      display: none  !important;
     }
-    * {
-      display: none;
+    > h2 {
+      display: block !important;
+      opacity: 1;
     }
   }
 }
