--- a/source/scss/enhancer-dark-mode.scss
+++ b/source/scss/enhancer-dark-mode.scss
@@ -3,8 +3,8 @@
   --box-shadow-color: #80808026;
   --list-filter-selected-bg-color: #00363a;
   --list-filter-selected-fg-color: var(--link-fg);
-  --change-list-table-header-bg-color: #334155;
-  --change-list-table-header-bg-color2: #1e293b;
+  --change-list-table-header-bg-color: #2E2E2E;
+  --change-list-table-header-bg-color2: #383838;
   --change-list-table-header-separator-color: var(--hairline-color);
   --change-list-table-header-fg-color: #e2e8f0;
   --change-list-table-header-bg-hover-color: #0369a1;
@@ -16,7 +16,7 @@
   --body-bg: #191919;
   --border-color: #535353;
   --hairline-color: #272727;
-  --darkened-bg: #262626;
+  --darkened-bg: #252525;
   --form-control-disabled-bg-color: #e9ecef;
   --checkbox-border-color: #495057;
   /* Pagination */
